# MXNet_Test

./: .gitignore  README.md
demo/MXNet_Test/: MXNet_Test.cpp  common.hpp  funset.cpp  funset.hpp
demo/ThirdPartyLibrary_Test/: ThirdPartyLibrary_Test.cpp  dmlc_test.cpp  dmlc_test.hpp  mshadow_test.cpp  mshadow_test.hpp  openblas_test.hpp
prj/linux_cmake_MXNet_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_ThirdPartyLibrary_Test/: CMakeLists.txt  build.sh
prj/x86_x64/: MXNet_Test.sln
prj/x86_x64/MXNet_Test/: MXNet_Test.vcxproj  MXNet_Test.vcxproj.filters
prj/x86_x64/ThirdPartyLibrary_Test/: ThirdPartyLibrary_Test.vcxproj  ThirdPartyLibrary_Test.vcxproj.filters
prj/x86_x64/libdmlc/: libdmlc.vcxproj  libdmlc.vcxproj.filters
prj/x86_x64/libmxnet/: libmxnet.vcxproj  libmxnet.vcxproj.filters
prj/x86_x64/libopenblas/: f77blas.h  libopenblas.vcxproj  libopenblas.vcxproj.filters  openblas.def  openblas_config.h
src/: version.txt
src/dmlc-core/: CMakeLists.txt
src/mshadow/mshadow/: base.h
src/mxnet/cpp-package/include/mxnet-cpp/: op.h
src/mxnet/docs/install/: requirements.txt
src/mxnet/scala-package/: pom.xml
src/mxnet/scala-package/core/: pom.xml
src/mxnet/scala-package/macros/: pom.xml
src/mxnet/src/c_api/: c_api_function.cc
src/mxnet/src/io/: iter_image_recordio_2.cc
src/mxnet/src/operator/: c_lapack_api.h  convolution_v1-inl.h  elemwise_op_common.h  operator_common.h
src/mxnet/src/operator/custom/: custom.cc
src/mxnet/src/operator/nn/: deconvolution-inl.h
src/mxnet/src/operator/tensor/: broadcast_reduce-inl.h  cast_storage-inl.h  ordering_op.cc
src/openblas/: CMakeLists.txt  common.h
src/tvm/include/tvm/runtime/: c_runtime_api.h
src/tvm/jvm/core/: pom.xml
src/tvm/vta/hardware/xilinx/scripts/: hls.tcl
src/tvm/vta/hardware/xilinx/sim/: vta_test.cc
